summative.moria.Moria.scala.error
Compilation error:
Moria:4: error: not found: value isOverbaggle
  while(isOverbaggle()==false){backward();}
        ^Moria:16: error: Unit does not take parameters
  avance()
        ^Moria:17: error: Unit does not take parameters
  deblaye()
         ^Moria:19: error: Unit does not take parameters
if(isOverBaggle==true){deblaye()}
                              ^