summative.moria.Moria.scala.code
def deblaye{
  
  pickupBaggle()
  while(isOverbaggle()==false){backward();}
  forward();
  dropBaggle();
}

def avance{
  
  while(isOverBaggle==false){forward();}
  
}

while(isFacingWall()==false){
  avance()
	deblaye()
}
if(isOverBaggle==true){deblaye()}
right()
forward()
left()
forward()